--- a/src/app/query/query.component.html
+++ b/src/app/query/query.component.html
@@ -4,17 +4,17 @@
       <h4>Insert Query</h4>
       <button (click)="runInsert()" class="btn btn-success">Run</button>
     </div>
-    <textarea [(ngModel)]="query" class="form-control"></textarea>
+    <textarea [(ngModel)]="insertQuery" class="form-control"></textarea>
     <div>
       <h4>Update Query</h4>
       <button (click)="runUpdate()" class="btn btn-success">Run</button>
     </div>
-    <textarea [(ngModel)]="query" class="form-control"></textarea>
+    <textarea [(ngModel)]="updateQuery" class="form-control"></textarea>
     <div>
       <h4>Batch Query</h4>
       <button (click)="runBatch()" class="btn btn-success">Run</button>
     </div>
-    <textarea [(ngModel)]="query" class="form-control"></textarea>
+    <textarea [(ngModel)]="batchQuery" class="form-control"></textarea>
   </div>
 
   <div class="col-md-6">
