UI improvements + Fix for response display

--- a/src/app/query/query.component.css
+++ b/src/app/query/query.component.css
@@ -7,4 +7,15 @@
 
 .query-container textarea {
     height: 200px;
+    margin-bottom: 10px;
+}
+
+h3{
+    margin-top: auto;
+    margin-right: 20px;
+}
+
+button{
+    position: absolute;
+    right: 10px;
 }
