--- a/src/app/query/query.component.html
+++ b/src/app/query/query.component.html
@@ -5,12 +5,12 @@
         <button (click)="resetDB()" class="btn btn-success">Reset</button>
     </div>
     <div style="display: flex;margin-bottom: 20px;">
-      <h3>Insert Query</h3>
+      <h3>Select Query</h3>
       <button (click)="runInsert()" class="btn btn-success">Run</button>
     </div>
     <textarea [(ngModel)]="insertQuery" class="form-control"></textarea>
     <div style="display: flex;margin-bottom: 20px;">
-      <h3>Update Query</h3>
+      <h3>Insert/Update Query</h3>
       <button (click)="runUpdate()" class="btn btn-success">Run</button>
     </div>
     <textarea [(ngModel)]="updateQuery" class="form-control"></textarea>
