Changes for images with proper size, for footer and for query.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,8 +30,9 @@
         </div>
         <app-messages></app-messages>
     </div>
-    <footer class="page-footer font-small blue pt-4">
 
+    <div class="push"></div>
+    <footer class="page-footer font-small blue pt-4">
         <!-- Footer Links -->
 
         <!-- Footer Links -->
