--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,9 @@
+.push {
+    height: 80px;
+}
 .page-footer {
     position: fixed;
-    bottom: 0;
+    bottom: 0px;
     width: 100%;
     height: 80px;
     background-color: #F4F4F4;
