Update dashboard layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,38 @@
 <div class="wrapper">
-    <!-- Sidebar -->
-    <nav id="sidebar">
-        <div class="sidebar-header">
-            <img src="../assets/images/typhon_logo_ui-01.png" height="48"/>
-        </div>
-
-        <ul *ngIf="isLoggedIn" class="list-unstyled components">
-            <li *ngFor="let item of items">
-                <a routerLink="{{item.url}}">{{item.name}}</a>
-            </li>
-        </ul>
-
-        <div *ngIf="isLoggedIn" class="user-area">
-            <i class="fa fa-user user-icon"></i>
-            <span>{{ username }}</span>
-            <span (click)="logout()" class="logout-btn">LOGOUT</span>
-        </div>
-
-        <div class="status-inidcator" (click)="toogleStatus()">
-            <span [ngClass]="{ 'up': status, 'down': !status, 'updating': waitingForStatusUpdate }" class="status-icon"></span>
-            <span class="status-text" *ngIf="!waitingForStatusUpdate">{{ status ? "ONLINE"  : "OFFLINE" }}</span>
-            <span class="status-text" *ngIf="waitingForStatusUpdate">UPDATING</span>
-        </div>
-    </nav>
-
     <div id="content">
-        <div class="contaienr">
+        <!-- Sidebar -->
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <img src="../assets/images/typhon_logo_ui-01.png" height="48" />
+            </div>
+
+            <ul *ngIf="isLoggedIn" class="list-unstyled components">
+                <li *ngFor="let item of items">
+                    <a routerLink="{{item.url}}">{{item.name}}</a>
+                </li>
+            </ul>
+
+            <div *ngIf="isLoggedIn" class="user-area">
+                <i class="fa fa-user user-icon"></i>
+                <span>{{ username }}</span>
+                <span (click)="logout()" class="logout-btn">LOGOUT</span>
+            </div>
+
+            <div class="status-inidcator" (click)="toogleStatus()">
+                <span [ngClass]="{ 'up': status, 'down': !status, 'updating': waitingForStatusUpdate }"
+                    class="status-icon"></span>
+                <span class="status-text" *ngIf="!waitingForStatusUpdate">{{ status ? "ONLINE"  : "OFFLINE" }}</span>
+                <span class="status-text" *ngIf="waitingForStatusUpdate">UPDATING</span>
+            </div>
+        </nav>
+        <div class="container">
             <router-outlet></router-outlet>
         </div>
         <app-messages></app-messages>
     </div>
 
-    <div class="push"></div>
+    <!-- <div class="push"></div> -->
+
     <footer class="page-footer font-small blue pt-4">
         <!-- Footer Links -->
 
@@ -39,10 +40,13 @@
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">
-            <img class="eu-flag" src="../assets/images/euflag.png"/>
-            <p class="eu-text">The TYPHON project receives funding under the European Union's Horizon 2020 Research and Innovation Programme under grant agreement No. 780251. The contents of this website do not necessarily reflect the position of the European Commission and the European Commission is not responsible for any use that may be made of the information it contains.</p>
+            <img class="eu-flag" src="../assets/images/euflag.png" />
+            <p class="eu-text">The TYPHON project receives funding under the European Union's Horizon 2020 Research and
+                Innovation Programme under grant agreement No. 780251. The contents of this website do not necessarily
+                reflect the position of the European Commission and the European Commission is not responsible for any
+                use that may be made of the information it contains.</p>
             <a target="_blank" href="https://www.clmsuk.com/">
-                <img class="logo" src="../assets/images/clms_logo.png"/>
+                <img class="logo" src="../assets/images/clms_logo.png" />
             </a>
         </div>
         <!-- Copyright -->
@@ -50,4 +54,3 @@
     </footer>
 </div>
 <!-- Footer -->
-
