--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,6 @@
     height: 80px;
 }
 .page-footer {
-    position: fixed;
     bottom: 0px;
     width: 100%;
     height: 80px;
@@ -35,8 +34,6 @@
 }
 
 .user-area {
-    position: absolute;
-    bottom: 130px;
     display: block;
     width: 220px;
     margin: 15px;
@@ -59,7 +56,8 @@
 }
 
 .status-inidcator {
-    position: absolute;
+    /* position: relative; */
+    /* position: absolute; */
     bottom: 80px;
     display: block;
     cursor: pointer;
